force-app/main/default/objects/Group_Member__c/fields/Assignment_Approval_Group__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Approval_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment/Approval Group</label>
    <referenceTo>Assignment_Approval_Group__c</referenceTo>
    <relationshipLabel>Group Members</relationshipLabel>
    <relationshipName>Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>