force-app/main/default/objects/Group_Member__c/fields/Lead_Assigned_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Lead_Assigned_Approved_On__c</fullName>
    <label>Lead Assigned/Approved On</label>
    <type>DateTime</type>
</CustomField>