force-app/main/default/objects/Group_Member__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Assignment_Approval_Group__c</columns>
    <columns>Active__c</columns>
    <columns>Lead_Assigned_Approved_On__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>